syntax = "proto3";

option csharp_namespace = "LocationAttraction.Grpc";

package LocationAttraction;

service LocationAttractionProtoService {
	// LocationCategory
  rpc CreateLocationCategory (CreateLocationCategoryRequest) returns (CreateLocationCategoryResponse);
  rpc GetLocationCategories (GetLocationCategoriesRequest) returns (GetLocationCategoriesResponse);
	// Location
  rpc CreateLocation (CreateLocationRequest) returns (CreateLocationResponse);	
  rpc RateLocation (RateLocationRequest) returns (RateLocationResponse);
  rpc AddImageLocation (AddImageLocationRequest) returns (AddImageLocationResponse);
  rpc GetLocationByCoordinates (GetLocationByCoordinatesRequest) returns (GetLocationResponse);
  rpc GetLocationById (GetLocationByIdRequest) returns (GetLocationResponse);
  rpc GetImagesByLocationId (GetImagesByLocationIdRequest) returns (GetImagesByLocationIdResponse);
  rpc GetRatingsByLocationId (GetRatingsByLocationIdRequest) returns (GetRatingsByLocationIdResponse);
  rpc RemoveImageLocation (RemoveImageLocationRequest) returns (RemoveImageLocationResponse);
  rpc RemoveRatingLocation (RemoveRatingLocationRequest) returns (RemoveRatingLocationResponse);

}
// LocationCategory

// CreateLocationCategory
message CreateLocationCategoryRequest {
	string name = 1;
	string description = 2;
}

message CreateLocationCategoryResponse {
	string locationCategoryId = 1;
}

// GetLocationCategories
message LocationCategory {
	string id = 1;
	string name = 2;
	string description = 3;
}

message GetLocationCategoriesRequest {

}

message GetLocationCategoriesResponse {
	repeated LocationCategory locationCategories = 1;
}


// Location

// CreateLocation
message CreateLocationRequest {
	string name = 1;
	string address = 2;
	double latitude = 3;
	double longitude = 4;
	string locationCategoryId = 5;
}

message CreateLocationResponse {
	string locationId = 1;
}


// RateLocation
message RateLocationRequest {
	string locationId = 1;
	string userId = 2;
	double value = 3;
}

message RateLocationResponse {
	bool isSuccess = 1;
}

// AddImageLocation
message AddImageLocationRequest {
	string locationId = 1;
	string url = 2;
}

message AddImageLocationResponse {
	bool isSuccess = 1;
}


message Location {
	string name = 1;
	string address = 2;
	Coordinates coordinates = 3;
	AverageRating averageRating = 4;
	LocationCategory locationCategory = 5;
}

message Image {
	string url = 1;
	string imageId = 2;
}

message Rating {
	string userId = 1;
	double value = 2;
}

message Coordinates {
	double longitude = 1;
	double latitude = 2;
}

message AverageRating {
	double value = 1;
	int32 numRatings = 2;
}

// GetLocationByCoordinates
message GetLocationByCoordinatesRequest {
	double longitude = 1;
	double latitude = 2;
}

message GetLocationResponse {
	Location location = 1;
}

// GetLocationByIdRequest

message GetLocationByIdRequest {
	string LocationId = 1;
}

message PaginationRequest {
	int32 pageIndex = 1;
	int32 pageSize = 2;
}

message PaginationResponse {
	int32 pageIndex = 1;
	int32 pageSize = 2;
	int32 totalCount = 3;
}

// GetImagesByLocationId

message GetImagesByLocationIdRequest {
	string locationId = 1;
	PaginationRequest paginationRequest = 2;
}

message GetImagesByLocationIdResponse {
	repeated Image images = 1;
	PaginationResponse paginationResponse = 2;
}

// GetRatingsByLocationId

message GetRatingsByLocationIdRequest {
	string LocationId = 1;
	PaginationRequest paginationRequest = 2;
}

message GetRatingsByLocationIdResponse {
	repeated Rating ratings = 1;
	PaginationResponse paginationResponse = 2;
}

// RemoveRatingLocation
message RemoveRatingLocationRequest {
	string locationId = 1;
	string userId = 2;
}

message RemoveRatingLocationResponse {
	bool isSuccess = 1;
}


// RemoveImageLocation
message RemoveImageLocationRequest {
	string locationId = 1;
	string imageId = 2;
}

message RemoveImageLocationResponse {
	bool isSuccess = 1;
}